cloent/posts, less: Prevent input text overflow

--- a/less/posts.mix.less
+++ b/less/posts.mix.less
@@ -197,9 +197,7 @@ header {
 	max-height: 85vh;
 	max-width: 100%;
 	resize: none;
-	overflow-wrap: break-word;
-	word-break: break-word;
-	word-wrap: break-word;
+	overflow: hidden;
 }
 
 .reply-form {
